objects/Store__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>IMAGE(&quot;http://maps.google.com/maps/api/staticmap?center=&quot; + TEXT(Location__Latitude__s) + &quot;,&quot; + TEXT(Location__Longitude__s) +&quot;&amp;zoom=16&amp;size=430x300&amp;markers=color:blue|&quot; + TEXT(Location__Latitude__s) + &quot;,&quot; + TEXT(Location__Longitude__s) + &quot;&amp;sensor=false&amp;format=png32!&quot;
, &quot;Error retrieving map&quot;, 300, 430)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Location__Latitude__s</columns>
        <columns>Location__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>